--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
   </div>
 
   <footer>
-    <a href="http://www.freepik.com">Images taken from freepik.com</a>
+    <a href="http://www.freepik.com">Images via freepik.com</a>
   </footer>
 </body>
