--- a/index.html
+++ b/index.html
@@ -33,39 +33,37 @@
     </div>
 
     <div class="row">
-      <div class="col col-sm col-md col-lg col-xl text-center">
+      <div class="col-md-6 text-center">
         <img class="half" src="assets/placeholder.png" />
       </div>
-      <div class="col col-sm col-md col-lg col-xl text-center">
+      <div class="col-md-6 text-center">
         <p class="info">
           This is nothing but a sample webpage. Created with
           <i class="fas fa-heart fa-spin" style="color: #ff6b6b;"></i> by Aditya
           Chendwankar. For more information, you can contact me via links given
           below.
         </p>
-        <div class="social">
-          <div class="row">
-            <div class="col col-sm col-md col-lg col-xl text-center">
-              <a
-                href="https://www.facebook.com/aditya.chendwankar"
-                target="_blank"
-              >
-                <img class="contact" src="assets/facebook.png" />
-              </a>
-            </div>
-            <div class="col col-sm col-md col-lg col-xl text-center">
-              <a href="https://twitter.com/adivc21" target="_blank">
-                <img class="contact" src="assets/twitter.png" />
-              </a>
-            </div>
-            <div class="col col-sm col-md col-lg col-xl text-center">
-              <a
-                href="https://www.linkedin.com/in/aditya-chendwankar-4318a4117/"
-                target="_blank"
-              >
-                <img class="contact" src="assets/LinkedIn.png" />
-              </a>
-            </div>
+        <div class="row">
+          <div class="col-md-4 text-center">
+            <a
+              href="https://www.facebook.com/aditya.chendwankar"
+              target="_blank"
+            >
+              <img class="contact" src="assets/facebook.png" />
+            </a>
+          </div>
+          <div class="col-md-4 text-center">
+            <a href="https://twitter.com/adivc21" target="_blank">
+              <img class="contact" src="assets/twitter.png" />
+            </a>
+          </div>
+          <div class="col-md-4 text-center">
+            <a
+              href="https://www.linkedin.com/in/aditya-chendwankar-4318a4117/"
+              target="_blank"
+            >
+              <img class="contact" src="assets/LinkedIn.png" />
+            </a>
           </div>
         </div>
       </div>
