--- a/index.html
+++ b/index.html
@@ -29,42 +29,45 @@
     </div>
 
     <div class="heading text-center">
-      <h1>Hello, world!</h1>
+      <h1>
+        Hello,
+        <i class="fas fa-globe-americas fa-spin" style="color: #10aaf1;"></i>!
+      </h1>
     </div>
 
-    <div class="row">
-      <div class="col-md-6 text-center">
-        <img class="half" src="assets/placeholder.png" />
-      </div>
-      <div class="col-md-6 text-center">
-        <p class="info">
-          This is nothing but a sample webpage. Created with
-          <i class="fas fa-heart fa-spin" style="color: #ff6b6b;"></i> by Aditya
-          Chendwankar. For more information, you can contact me via links given
-          below.
-        </p>
-        <div class="row">
-          <div class="col-md-4 text-center">
-            <a
-              href="https://www.facebook.com/aditya.chendwankar"
-              target="_blank"
-            >
-              <img class="contact" src="assets/facebook.png" />
-            </a>
-          </div>
-          <div class="col-md-4 text-center">
-            <a href="https://twitter.com/adivc21" target="_blank">
-              <img class="contact" src="assets/twitter.png" />
-            </a>
-          </div>
-          <div class="col-md-4 text-center">
-            <a
-              href="https://www.linkedin.com/in/aditya-chendwankar-4318a4117/"
-              target="_blank"
-            >
-              <img class="contact" src="assets/LinkedIn.png" />
-            </a>
-          </div>
+    <div class="text-center">
+      <img class="half" src="assets/placeholder.png" />
+    </div>
+    <div class="text-center">
+      <p class="info">
+        This is nothing but a sample webpage. Created with
+        <i class="fab fa-html5" style="color: #e77123;"></i>,
+        <i class="fab fa-css3" style="color: #2db8e2;"></i>,
+        <i class="fab fa-bootstrap" style="color: #6917b6;"></i> &
+        <i class="fas fa-heart" style="color: #b33030;"></i> by Aditya
+        Chendwankar. For more <i class="fas fa-info-circle"></i>, you can
+        contact me via <i class="fab fa-facebook-square"></i>,
+        <i class="fab fa-twitter"></i> and
+        <i class="fab fa-linkedin"></i> profiles shared below.
+      </p>
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <a href="https://www.facebook.com/aditya.chendwankar" target="_blank">
+            <img class="contact" src="assets/facebook.png" />
+          </a>
+        </div>
+        <div class="col-md-4 text-center">
+          <a href="https://twitter.com/adivc21" target="_blank">
+            <img class="contact" src="assets/twitter.png" />
+          </a>
+        </div>
+        <div class="col-md-4 text-center">
+          <a
+            href="https://www.linkedin.com/in/aditya-chendwankar-4318a4117/"
+            target="_blank"
+          >
+            <img class="contact" src="assets/LinkedIn.png" />
+          </a>
         </div>
       </div>
     </div>
